colorbox overflow issue solved

--- a/src/Styling/Colorbox.css
+++ b/src/Styling/Colorbox.css
@@ -24,31 +24,33 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  transform: scale(0.2);
-  height: 100%;
+  font-size: 4rem;
+  transform: scale(0.1);
+  /* height: 100%; */
   color: white;
   opacity: 0;
 }
 
 .copy-msg-container.show {
   opacity: 1;
-  z-index: 111;
+  z-index: 25;
+  transform: scale(1);
   transition: all 0.4s ease-in-out;
-  transition-delay: 0.5s;
+  transition-delay: 0.3s;
 }
 .copy-msg {
-  font-weight: bold;
-  text-shadow: 1px 4px black;
-  width: 500%;
+  font-weight: 400;
+  text-shadow: 1px 2px black;
+  width: 100%;
   background: rgba(255, 255, 255, 0.1);
-  font-size: 15rem;
+  /* font-size: 15rem; */
   text-align: center;
   padding: 2rem;
   margin-bottom: 0;
   text-transform: uppercase;
 }
 .copy-msg-container p {
-  font-size: 7rem;
+  font-size: 2rem;
   font-weight: 100;
 }
 .moreBtn {
